# sparse-matrix

./: Edge.h  Factorization.h  Graph.h  LU.h  LowTriangular.h  Matrix.h  Permutation.cpp  Permutation.h  README.md  Row.h  UpperTraingular.h  Vector.h  XMatrix.cpp  XMatrix.h
Exception/: CMakeCache.txt  CMakeLists.txt  DivideByZero.cpp  DivideByZero.h  Makefile  cmake_install.cmake
Exception/ExceptionGraph/: CMakeLists.txt  EdgeNotExsit.cpp  EdgeNotExsit.h
Exception/ExceptionMatrix/: CMakeLists.txt  ConversionException.cpp  ConversionException.h  InvaildSize.cpp  InvaildSize.h  MatrixOutOfRange.cpp  MatrixOutOfRange.h  NoSoultion.cpp  NoSoultion.h  OperatorException.cpp  OperatorException.h  OperatorMultiplyException.cpp  OperatorMultiplyException.h  OperatorPlusException.cpp  OperatorPlusException.h
Exception/FactorizationException/: CMakeLists.txt  FactorizationException.cpp  FactorizationException.h  LUException.cpp  LUException.h
Exception/SpecailMatrixException/: CMakeLists.txt  ExcessDenied.cpp  ExcessDenied.h
Exception/TestExcpetion/: CMakeLists.txt  FileError.cpp  FileError.h  InvaildName.cpp  InvaildName.h  TestNotExsit.cpp  TestNotExsit.h
